; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-omap.c_omap_gpio_wake_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-omap.c_omap_gpio_wake_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.gpio_bank = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.irq_data*, i32)* @omap_gpio_wake_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @omap_gpio_wake_enable(%struct.irq_data* %0, i32 %1) #0 {
  %3 = alloca %struct.irq_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_bank*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.irq_data*, %struct.irq_data** %3, align 8
  %7 = call %struct.gpio_bank* @omap_irq_data_get_bank(%struct.irq_data* %6)
  store %struct.gpio_bank* %7, %struct.gpio_bank** %5, align 8
  %8 = load %struct.gpio_bank*, %struct.gpio_bank** %5, align 8
  %9 = getelementptr inbounds %struct.gpio_bank, %struct.gpio_bank* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @irq_set_irq_wake(i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local %struct.gpio_bank* @omap_irq_data_get_bank(%struct.irq_data*) #1

declare dso_local i32 @irq_set_irq_wake(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
